--- a/home/templates/home/ver_persona.html
+++ b/home/templates/home/ver_persona.html
@@ -9,7 +9,7 @@
 <body>
     <p>Listado de personas:</p>
     {% for persona  in  personas%}
-       <li> {{personas.nombre}} {{persona.apellido}} {{persona.edad}}</li>
+       <li> {{persona.nombre}} {{persona.apellido}} {{persona.edad}}</li>
     {% endfor %}
 
 </body>
