--- a/home/templates/home/crear_persona.html
+++ b/home/templates/home/crear_persona.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>La persona se creo! </p>
-</body>
-</html>
+{% extends 'home/base.html' %}
+
+{% block title_pagina %}
+<title>Crear persona</title>
+{% endblock title_pagina %}
+
+
+{% block mi_contenido  %}
+<form action= {% url 'crear_persona' %} method = "POST">
+    {% csrf_token %}
+    <p>
+    Nombre:
+    <input type ="text" name = "nombre" placeholder= 'Nombre'>  <!--el placeholder es cuando aparece el texto dentro del cuadro donde se mete la info -->
+    </p>
+    <p>
+    <label for ="apellido">Apellido:</label>    
+    <input type ="text" name = "apellido" placeholder= 'Apellido'>
+    </p>
+
+    {% comment %} <input type="button" value="Crear"> {% endcomment %}      <!-- 3 formas distintas de hacer un button-->
+    {% comment %} <input type="submit" value="Crear"> {% endcomment %}
+    <button>Crear</button>
+
+
+</form>
+{% endblock mi_contenido  %}
+ 
