--- a/home/templates/home/ver_persona.html
+++ b/home/templates/home/ver_persona.html
@@ -21,7 +21,14 @@ VER PERSONAS
 <p>
 {% if personas %}
         {% for persona  in  personas %}
-                <li>{{persona.nombre}} {{persona.apellido}} {{persona.edad}}</li>
+                <li>
+                        {{persona.nombre}} {{persona.apellido}} {{persona.edad}} {{persona.fecha_nacimiento}}
+                        <a  href = {% url 'eliminar_persona' persona.id %}>Eliminar </a> 
+                        {% comment %} boton eliminar {% endcomment %}
+                        
+                
+
+                </li>
         {% endfor %}
 {% else %}
         <p>No se encontraron personas</p>
