--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -23,10 +23,18 @@
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
             <a class="navbar-brand" href = {% url 'index' %}>Index</a>
-            <a class="navbar-brand" href = {% url 'hola' %}>Hola</a>
-            <a class="navbar-brand" href = {% url 'fecha' %}>Fecha</a>
+            {% comment %} <a class="navbar-brand" href = {% url 'hola' %}>Hola</a> {% endcomment %}
+            {% comment %} <a class="navbar-brand" href = {% url 'fecha' %}>Fecha</a> {% endcomment %}
             <a class="navbar-brand" href = {% url 'ver_personas' %}>Ver personas</a>
             <a class="navbar-brand" href = {% url 'ver_mascotas' %}>Ver mascotas</a>
+            {%if request.user.is_authenticated%} 
+                    <a class="navbar-brand" href = {% url 'logout' %}>Cerrar Sesión</a>
+            {%else %}
+                    <a class="navbar-brand" href = {% url 'login' %}>Iniciar Sesión</a>
+                    <a class="navbar-brand" href = {% url 'registrar' %}>Registrarse</a>
+            {% endif %}
+            
+
         </div>
     </nav>
 
