--- a/home/templates/padres/base.html
+++ b/home/templates/padres/base.html
@@ -28,6 +28,7 @@
             <a class="navbar-brand" href = {% url 'ver_personas' %}>Ver personas</a>
             <a class="navbar-brand" href = {% url 'ver_mascotas' %}>Ver mascotas</a>
             {%if request.user.is_authenticated%} 
+                    <a class="navbar-brand" href = {% url 'perfil'%} >{{request.user.username }}</a>
                     <a class="navbar-brand" href = {% url 'logout' %}>Cerrar Sesión</a>
             {%else %}
                     <a class="navbar-brand" href = {% url 'login' %}>Iniciar Sesión</a>
